RESOLVED FIXED210389
[Async overflow] Can't scroll overflow:scroll in sideways-scrollable RTL document
https://bugs.webkit.org/show_bug.cgi?id=210389
Summary [Async overflow] Can't scroll overflow:scroll in sideways-scrollable RTL docu...
Simon Fraser (smfr)
Reported 2020-04-11 12:54:35 PDT
[Async overflow] Can't scroll overflow:scroll in sideways-scrollable RTL document
Attachments
Patch (12.24 KB, patch)
2020-04-11 12:56 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-04-11 12:56:38 PDT
Radar WebKit Bug Importer
Comment 2 2020-04-11 12:57:12 PDT
EWS
Comment 3 2020-04-11 16:49:32 PDT
Committed r259936: <https://trac.webkit.org/changeset/259936> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396186 [details].
Note You need to log in before you can comment on or make changes to this bug.