[Async overflow] Can't scroll overflow:scroll in sideways-scrollable RTL document https://bugs.webkit.org/show_bug.cgi?id=210389

Reviewed by Tim Horton.

Source/WebCore:

ScrollingTree::handleWheelEvent() converts the event coordinates from view to "content"
coordinates, but we then jump into hit-testing on CALayers. In a sideways-scrollable
RTL document, the root content layer has a negative X offset which corresponds to
scrollOrigin; we need to map the point into the coordinate space of this layer
before entering layer-based hit-testing.

Tests: fast/scrolling/mac/async-scroll-overflow-rtl-zoomed.html
       fast/scrolling/mac/async-scroll-overflow-rtl.html

* page/scrolling/ScrollingTree.cpp:
(WebCore::ScrollingTree::handleWheelEvent):
* page/scrolling/mac/ScrollingTreeMac.mm:
(ScrollingTreeMac::scrollingNodeForPoint):

LayoutTests:

* fast/scrolling/mac/async-scroll-overflow-rtl-expected.txt: Added.
* fast/scrolling/mac/async-scroll-overflow-rtl-zoomed-expected.txt: Added.
* fast/scrolling/mac/async-scroll-overflow-rtl-zoomed.html: Added.
* fast/scrolling/mac/async-scroll-overflow-rtl.html: Added.


Canonical link: https://commits.webkit.org/223282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259936 268f45cc-cd09-0410-ab3c-d52691b4dbfc